<resources>
    <string name="app_name" translatable="false">RickAndMorty</string>
    <string name="search">Search</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="origin_location">Origin location</string>
    <string name="last_known_location">Last known location</string>
    <string name="dimension_is">Dimension:</string>
    <string name="type_is">Type:</string>
    <string name="air_date_is">Air date:</string>
    <string name="episode_is">Episode:</string>
    <string name="type">Type</string>
    <string name="air_date">Air date</string>
    <string name="dimension">Dimension</string>
    <string name="loading">Loading…</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="genderless">Genderless</string>
    <string name="species">Species</string>
    <string name="apply_filters">Apply filters</string>
    <string name="cancel">Cancel</string>
    <string name="episode">Episode</string>
</resources>