<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/spacing_4"
    android:paddingHorizontal="@dimen/spacing_6"
    android:background="@drawable/bg_bottom_sheet"
    tools:context=".ui.dialog.CharacterFilterBottomSheet">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/BottomSheetDialog.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btn_group_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        app:singleSelection="true">

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_status_alive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alive"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_status_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dead"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_status_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unknown"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        style="@style/BottomSheetDialog.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_4"
        android:text="@string/gender"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btn_group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <Button
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:id="@+id/btn_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_gender_female_14"/>

        <Button
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:id="@+id/btn_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_gender_male_14"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_gender_genderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderless"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_gender_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unknown"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/species" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="?attr/materialButtonStyle"
        android:id="@+id/btn_apply_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/apply_filters"/>

    <Button
        style="?attr/materialIconButtonFilledTonalStyle"
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:text="@string/cancel"/>

</LinearLayout>