<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.CharacterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/white"
            app:statusBarScrim="@android:color/transparent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/bg_app_bar"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>

            <!--            <Button-->
            <!--                style="?materialIconButtonFilledTonalStyle"-->
            <!--                android:id="@+id/btn_back"-->
            <!--                android:layout_width="48dp"-->
            <!--                android:layout_height="48dp"-->
            <!--                app:icon="@drawable/ic_arrow_back_24"-->
            <!--                app:iconTint="?attr/colorPrimary"-->
            <!--                android:layout_gravity="top|start"-->
            <!--                android:layout_marginStart="@dimen/spacing_4"-->
            <!--                android:layout_marginTop="@dimen/spacing_9"-->
            <!--                app:layout_collapseMode="parallax"/>-->

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:background="@android:color/transparent"
                app:navigationIcon="@drawable/ic_arrow_back_24" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_4">

            <Space
                android:id="@+id/image_spacer"
                android:layout_width="124dp"
                android:layout_height="76dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                style="@style/ItemPage.Text.Title"
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_spacer"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Jacqueline" />

            <View
                android:id="@+id/view_state"
                android:layout_width="8dp"
                android:layout_height="8dp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toTopOf="@id/tv_state"
                app:layout_constraintBottom_toBottomOf="@id/tv_state"
                android:background="@drawable/oval"
                tools:backgroundTint="@color/green_500"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle"
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/view_state"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                android:layout_marginStart="@dimen/spacing_2"
                tools:text="Alive"/>

            <View
                android:id="@+id/view_line"
                android:layout_width="6dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toEndOf="@id/tv_state"
                app:layout_constraintTop_toTopOf="@id/tv_state"
                app:layout_constraintBottom_toBottomOf="@id/tv_state"
                android:layout_marginStart="@dimen/spacing_2"
                android:background="@color/black"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle"
                android:id="@+id/tv_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/view_line"
                app:layout_constraintTop_toTopOf="@id/tv_state"
                app:layout_constraintBottom_toBottomOf="@id/tv_state"
                android:layout_marginStart="@dimen/spacing_2"
                android:drawablePadding="@dimen/spacing_2"
                tools:text="Human"
                tools:drawableEndCompat="@drawable/ic_gender_female_14"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="image_spacer,tv_state,tv_species"
                app:barrierDirection="bottom"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle.Label"
                android:id="@+id/tv_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                android:layout_marginTop="@dimen/spacing_5"
                android:text="@string/type"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle"
                android:id="@+id/tv_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_type_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_type_label"
                android:layout_marginTop="@dimen/spacing_3"
                tools:text="None"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle.Label"
                android:id="@+id/tv_origin_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_type"
                android:layout_marginTop="@dimen/spacing_5"
                android:text="@string/origin_location"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle"
                android:id="@+id/tv_origin_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_origin_location_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_origin_location_label"
                android:layout_marginTop="@dimen/spacing_3"
                tools:text="Earth (Replacement Dimension)"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle.Label"
                android:id="@+id/tv_last_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_origin_location"
                android:layout_marginTop="@dimen/spacing_5"
                android:text="@string/last_known_location"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle"
                android:id="@+id/tv_last_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_last_location_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_last_location_label"
                android:layout_marginTop="@dimen/spacing_3"
                tools:text="Earth (Replacement Dimension)"/>

            <TextView
                style="@style/ItemPage.Text.Subtitle.Label"
                android:id="@+id/tv_episode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_last_location"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/spacing_5"
                android:text="@string/episodes"/>

            <ProgressBar
                android:id="@+id/pb_episodes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_episode_label"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintTop_toTopOf="@+id/tv_episode_label"
                app:layout_constraintStart_toEndOf="@id/tv_episode_label"
                android:layout_marginStart="@dimen/spacing_2"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_episodes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_episode_label"
                android:layout_marginTop="@dimen/spacing_4"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_episode_short"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_anchor="@id/image_spacer"
        app:layout_anchorGravity="bottom|start"
        android:layout_gravity="top|start"
        android:layout_marginStart="@dimen/spacing_4"
        app:cardCornerRadius="12dp"
        app:strokeColor="@color/blue_500"
        app:strokeWidth="2dp"
        app:cardElevation="24dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/grey_600"/>

    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>